--- a/index.html
+++ b/index.html
@@ -6,15 +6,65 @@
   <title>Slide Guys Booking</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
   <style>
-    body { background-color: #f8f9fa; font-family: Arial, sans-serif; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      min-height: 100vh;
+
+      /* ✅ Party background (CSS-only): streamers + confetti + balloons */
+      background:
+        /* confetti dots */
+        radial-gradient(circle at 12% 18%, rgba(255, 77, 79, .18) 0 3px, transparent 4px),
+        radial-gradient(circle at 28% 42%, rgba(255, 193, 7, .18) 0 3px, transparent 4px),
+        radial-gradient(circle at 62% 26%, rgba(0, 106, 255, .16) 0 3px, transparent 4px),
+        radial-gradient(circle at 78% 52%, rgba(45, 212, 191, .16) 0 3px, transparent 4px),
+        radial-gradient(circle at 44% 70%, rgba(168, 85, 247, .14) 0 3px, transparent 4px),
+        radial-gradient(circle at 86% 80%, rgba(34, 197, 94, .14) 0 3px, transparent 4px),
+        radial-gradient(circle at 10% 78%, rgba(255, 77, 79, .14) 0 3px, transparent 4px),
+        radial-gradient(circle at 50% 88%, rgba(255, 193, 7, .14) 0 3px, transparent 4px),
+
+        /* streamers (diagonal ribbons) */
+        repeating-linear-gradient(135deg,
+          rgba(0, 106, 255, .08) 0 10px,
+          transparent 10px 28px
+        ),
+        repeating-linear-gradient(45deg,
+          rgba(255, 193, 7, .07) 0 12px,
+          transparent 12px 30px
+        ),
+
+        /* balloons (soft circles near edges) */
+        radial-gradient(circle at 6% 20%, rgba(255, 77, 79, .18) 0 70px, transparent 71px),
+        radial-gradient(circle at 12% 32%, rgba(255, 193, 7, .16) 0 60px, transparent 61px),
+        radial-gradient(circle at 92% 22%, rgba(0, 106, 255, .14) 0 75px, transparent 76px),
+        radial-gradient(circle at 86% 36%, rgba(168, 85, 247, .12) 0 62px, transparent 63px),
+        radial-gradient(circle at 92% 78%, rgba(45, 212, 191, .12) 0 70px, transparent 71px),
+        radial-gradient(circle at 8% 82%, rgba(34, 197, 94, .12) 0 68px, transparent 69px),
+
+        /* base */
+        linear-gradient(180deg, #f7fbff 0%, #f8f9fa 50%, #f7fbff 100%);
+      background-attachment: fixed;
+    }
+
+    /* ✅ Readability overlay */
+    body::before{
+      content:"";
+      position: fixed;
+      inset: 0;
+      background: rgba(255,255,255,0.65);
+      pointer-events: none;
+    }
 
     .booking-form {
+      position: relative; /* above overlay */
       max-width: 500px;
       margin: 50px auto;
-      background: white;
+      background: rgba(255,255,255,0.92);
       padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      border-radius: 14px;
+      box-shadow: 0 8px 28px rgba(0,0,0,0.12);
+      backdrop-filter: blur(6px);
+      -webkit-backdrop-filter: blur(6px);
     }
 
     .form-control { background-color: #e9f0ff; }
@@ -105,7 +155,6 @@
     .unit-card-btn.booked img { filter: grayscale(35%); }
     .unit-card-btn.booked .unit-badge { background: #ffe9ea; }
 
-    /* "In Cart" styling */
     .unit-card-btn.incart {
       border-color: #ffd27a;
       box-shadow: 0 0 0 3px rgba(255, 210, 122, 0.28);
@@ -121,10 +170,7 @@
       font-size: 0.95rem;
     }
 
-    /* Total rows */
-    .cart-totals {
-      margin-top: 10px;
-    }
+    .cart-totals { margin-top: 10px; }
     .cart-total-row {
       display: flex;
       justify-content: space-between;
@@ -155,7 +201,6 @@
       <input type="text" id="address" class="form-control mb-2" placeholder="Address" required />
       <input type="text" id="city" class="form-control mb-2" placeholder="City" required />
 
-      <!-- Date picker above selected unit -->
       <input type="date" id="date" class="form-control mb-3" required />
 
       <div class="selected-unit-pill">
@@ -181,7 +226,6 @@
       <h5 class="mb-2">Cart</h5>
       <ul class="list-group" id="cartList"></ul>
 
-      <!-- ✅ Totals -->
       <div class="cart-totals">
         <div class="cart-total-row">
           <div class="label">Total</div>
@@ -223,18 +267,13 @@
       let bookedUnitIds = new Set();
       let checking = false;
 
-      // cart: { unitId, unitName, price, date }
-      const cart = [];
+      const cart = []; // { unitId, unitName, price, date }
 
-      function cartKey(unitId, dateStr) {
-        return `${String(unitId)}|${dateStr}`;
-      }
+      function cartKey(unitId, dateStr) { return `${String(unitId)}|${dateStr}`; }
 
       function cartKeysForDate(dateStr) {
         const set = new Set();
-        cart.forEach(item => {
-          if (item.date === dateStr) set.add(cartKey(item.unitId, item.date));
-        });
+        cart.forEach(item => { if (item.date === dateStr) set.add(cartKey(item.unitId, item.date)); });
         return set;
       }
 
@@ -274,7 +313,6 @@
         const unitGrid = document.getElementById('unitGrid');
         const selectedDate = document.getElementById('date').value;
         const hasDate = !!selectedDate;
-
         const inCartForThisDate = hasDate ? cartKeysForDate(selectedDate) : new Set();
 
         unitGrid.innerHTML = '';
@@ -310,18 +348,9 @@
 
           btn.addEventListener('click', () => {
             const chosenDate = document.getElementById('date').value;
-            if (!chosenDate) {
-              alert('Please select a date first.');
-              return;
-            }
-            if (checking) {
-              alert('Checking availability… try again in a second.');
-              return;
-            }
-            if (bookedUnitIds.has(unitId)) {
-              alert('Sorry — this unit is already booked on this date.');
-              return;
-            }
+            if (!chosenDate) return alert('Please select a date first.');
+            if (checking) return alert('Checking availability… try again in a second.');
+            if (bookedUnitIds.has(unitId)) return alert('Sorry — this unit is already booked on this date.');
 
             unitGrid.querySelectorAll('.unit-card-btn').forEach(b => b.classList.remove('selected'));
             btn.classList.add('selected');
@@ -339,7 +368,6 @@
           .select('id, name, thumbnail_url, price');
 
         if (error) return;
-
         unitsCache = data || [];
         renderUnits();
       }
@@ -356,11 +384,9 @@
           .select('unit')
           .eq('date', dateStr);
 
-        if (!error && bookings) {
-          bookedUnitIds = new Set(bookings.map(b => String(b.unit)));
-        } else {
-          bookedUnitIds = new Set();
-        }
+        bookedUnitIds = (!error && bookings)
+          ? new Set(bookings.map(b => String(b.unit)))
+          : new Set();
 
         checking = false;
         renderUnits();
@@ -368,9 +394,7 @@
         const selectedUnitName = document.getElementById('unit').value;
         if (selectedUnitName) {
           const selectedUnit = unitsCache.find(u => u.name === selectedUnitName);
-          if (selectedUnit && bookedUnitIds.has(String(selectedUnit.id))) {
-            clearSelectionUI();
-          }
+          if (selectedUnit && bookedUnitIds.has(String(selectedUnit.id))) clearSelectionUI();
         }
       }
 
@@ -390,37 +414,23 @@
 
       await loadUnits();
 
-      // Add to Cart
       document.getElementById('addToCartBtn').addEventListener('click', async () => {
         const unitName = document.getElementById('unit').value;
         const date = document.getElementById('date').value;
 
-        if (!unitName || !date) {
-          alert('Please select a unit and a date before adding to cart.');
-          return;
-        }
+        if (!unitName || !date) return alert('Please select a unit and a date before adding to cart.');
 
         await refreshAvailability(date);
 
         const unitRow = unitsCache.find(u => u.name === unitName);
-        if (!unitRow) {
-          alert('Could not find that unit. Please try again.');
-          return;
-        }
+        if (!unitRow) return alert('Could not find that unit. Please try again.');
 
         const unitId = String(unitRow.id);
-
-        if (bookedUnitIds.has(unitId)) {
-          alert('That unit is already booked on this date.');
-          clearSelectionUI();
-          return;
-        }
+        if (bookedUnitIds.has(unitId)) { alert('That unit is already booked on this date.'); clearSelectionUI(); return; }
 
         const key = cartKey(unitId, date);
-        const alreadyInCart = cart.some(item => cartKey(item.unitId, item.date) === key);
-        if (alreadyInCart) {
-          alert('That unit is already in your cart for this date.');
-          return;
+        if (cart.some(item => cartKey(item.unitId, item.date) === key)) {
+          return alert('That unit is already in your cart for this date.');
         }
 
         cart.push({ unitId, unitName, price: unitRow.price, date });
@@ -447,7 +457,6 @@
         updateCartTotalsUI();
       });
 
-      // Submit (ONE email only if ALL succeed) + total + deposit
       document.getElementById('bookingForm').addEventListener('submit', async (e) => {
         e.preventDefault();
 
@@ -457,10 +466,7 @@
         const address = document.getElementById('address').value.trim();
         const city = document.getElementById('city').value.trim();
 
-        if (cart.length === 0) {
-          alert('Your cart is empty. Please add at least one booking.');
-          return;
-        }
+        if (cart.length === 0) return alert('Your cart is empty. Please add at least one booking.');
 
         let allSuccessful = true;
         const reservedLines = [];
@@ -474,10 +480,7 @@
             .eq('name', unitName)
             .single();
 
-          if (unitError || !unitData) {
-            allSuccessful = false;
-            continue;
-          }
+          if (unitError || !unitData) { allSuccessful = false; continue; }
 
           const unitId = unitData.id;
 
@@ -487,10 +490,7 @@
             .eq('unit', unitId)
             .eq('date', date);
 
-          if (existing && existing.length > 0) {
-            allSuccessful = false;
-            continue;
-          }
+          if (existing && existing.length > 0) { allSuccessful = false; continue; }
 
           const { error: insertError } = await supabase.from('bookings').insert([
             { name, phone, email, address, city, unit: unitId, date }
@@ -503,7 +503,6 @@
           }
         }
 
-        // ✅ Email only on full success + include total + deposit
         if (allSuccessful) {
           const items_summary = reservedLines.join('\n');
           const total_price = `$${formatMoney(getCartTotal())}`;
@@ -518,7 +517,6 @@
             items_summary,
             total_price,
             deposit_total,
-            // backward compatibility
             unit: cart[0]?.unitName || '',
             date: cart[0]?.date || ''
           };
@@ -531,7 +529,6 @@
           document.getElementById('bookingForm').reset();
 
           clearSelectionUI();
-
           cart.length = 0;
           document.getElementById('cartList').innerHTML = '';
           document.getElementById('cartSection').style.display = 'none';
