--- a/index.html
+++ b/index.html
@@ -6,69 +6,108 @@
   <title>Slide Guys Booking</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
   <style>
+    /* ====== PARTY BACKGROUND (rich, vibrant, faux-3D) ====== */
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       min-height: 100vh;
+      overflow-x: hidden;
 
-      /* ✅ Party background (stronger) */
+      /* Deep, vibrant base with glow */
       background:
-        /* confetti dots (more visible) */
-        radial-gradient(circle at 12% 18%, rgba(255, 77, 79, .34) 0 3px, transparent 4px),
-        radial-gradient(circle at 28% 42%, rgba(255, 193, 7, .32) 0 3px, transparent 4px),
-        radial-gradient(circle at 62% 26%, rgba(0, 106, 255, .28) 0 3px, transparent 4px),
-        radial-gradient(circle at 78% 52%, rgba(45, 212, 191, .28) 0 3px, transparent 4px),
-        radial-gradient(circle at 44% 70%, rgba(168, 85, 247, .26) 0 3px, transparent 4px),
-        radial-gradient(circle at 86% 80%, rgba(34, 197, 94, .26) 0 3px, transparent 4px),
-        radial-gradient(circle at 10% 78%, rgba(255, 77, 79, .26) 0 3px, transparent 4px),
-        radial-gradient(circle at 50% 88%, rgba(255, 193, 7, .26) 0 3px, transparent 4px),
-
-        /* streamers (stronger ribbons) */
-        repeating-linear-gradient(135deg,
-          rgba(0, 106, 255, .14) 0 10px,
-          transparent 10px 28px
-        ),
-        repeating-linear-gradient(45deg,
-          rgba(255, 193, 7, .13) 0 12px,
-          transparent 12px 30px
-        ),
-        repeating-linear-gradient(120deg,
-          rgba(255, 77, 79, .10) 0 9px,
-          transparent 9px 26px
-        ),
-
-        /* balloons (more visible) */
-        radial-gradient(circle at 6% 20%, rgba(255, 77, 79, .28) 0 70px, transparent 71px),
-        radial-gradient(circle at 12% 32%, rgba(255, 193, 7, .24) 0 60px, transparent 61px),
-        radial-gradient(circle at 92% 22%, rgba(0, 106, 255, .22) 0 75px, transparent 76px),
-        radial-gradient(circle at 86% 36%, rgba(168, 85, 247, .18) 0 62px, transparent 63px),
-        radial-gradient(circle at 92% 78%, rgba(45, 212, 191, .18) 0 70px, transparent 71px),
-        radial-gradient(circle at 8% 82%, rgba(34, 197, 94, .18) 0 68px, transparent 69px),
-
-        /* base */
-        linear-gradient(180deg, #eef6ff 0%, #f3f4f6 45%, #eef6ff 100%);
+        radial-gradient(1200px 700px at 20% 10%, rgba(255, 0, 153, 0.25), transparent 60%),
+        radial-gradient(900px 600px at 80% 15%, rgba(0, 200, 255, 0.22), transparent 60%),
+        radial-gradient(900px 650px at 50% 95%, rgba(255, 214, 0, 0.18), transparent 65%),
+        linear-gradient(180deg, #0b1020 0%, #141a33 45%, #0b1020 100%);
       background-attachment: fixed;
     }
 
-    /* ✅ Less wash-out: lower opacity overlay */
+    /* Streamers layer */
     body::before{
       content:"";
       position: fixed;
-      inset: 0;
-      background: rgba(255,255,255,0.35); /* was 0.65 */
+      inset: -20px;
       pointer-events: none;
+      z-index: 0;
+
+      background:
+        /* diagonal streamers */
+        repeating-linear-gradient(130deg,
+          rgba(255, 80, 170, 0.18) 0 12px,
+          transparent 12px 40px
+        ),
+        repeating-linear-gradient(48deg,
+          rgba(0, 206, 255, 0.16) 0 10px,
+          transparent 10px 36px
+        ),
+        repeating-linear-gradient(92deg,
+          rgba(255, 214, 0, 0.12) 0 10px,
+          transparent 10px 42px
+        );
+
+      filter: blur(0.2px);
+      opacity: 0.95;
     }
 
+    /* Balloons + confetti + subtle vignette */
+    body::after{
+      content:"";
+      position: fixed;
+      inset: 0;
+      pointer-events: none;
+      z-index: 1;
+
+      background:
+        /* 3D-ish balloons (stacked highlights/shadows) */
+        radial-gradient(circle at 10% 18%, rgba(255,255,255,0.45) 0 10px, transparent 11px),
+        radial-gradient(circle at 12% 22%, rgba(255, 80, 170, 0.85) 0 62px, transparent 63px),
+        radial-gradient(circle at 13% 25%, rgba(0,0,0,0.25) 0 62px, transparent 64px),
+
+        radial-gradient(circle at 88% 16%, rgba(255,255,255,0.42) 0 9px, transparent 10px),
+        radial-gradient(circle at 86% 20%, rgba(0, 206, 255, 0.80) 0 70px, transparent 71px),
+        radial-gradient(circle at 87% 23%, rgba(0,0,0,0.25) 0 70px, transparent 72px),
+
+        radial-gradient(circle at 92% 78%, rgba(255,255,255,0.35) 0 9px, transparent 10px),
+        radial-gradient(circle at 90% 82%, rgba(255, 214, 0, 0.78) 0 68px, transparent 69px),
+        radial-gradient(circle at 91% 85%, rgba(0,0,0,0.25) 0 68px, transparent 71px),
+
+        radial-gradient(circle at 8% 84%, rgba(255,255,255,0.35) 0 9px, transparent 10px),
+        radial-gradient(circle at 10% 88%, rgba(94, 234, 212, 0.70) 0 62px, transparent 63px),
+        radial-gradient(circle at 11% 91%, rgba(0,0,0,0.25) 0 62px, transparent 65px),
+
+        /* confetti (lots of dots) */
+        radial-gradient(circle at 18% 32%, rgba(255, 214, 0, .55) 0 2px, transparent 3px),
+        radial-gradient(circle at 22% 46%, rgba(0, 206, 255, .55) 0 2px, transparent 3px),
+        radial-gradient(circle at 34% 28%, rgba(255, 80, 170, .55) 0 2px, transparent 3px),
+        radial-gradient(circle at 40% 52%, rgba(94, 234, 212, .55) 0 2px, transparent 3px),
+        radial-gradient(circle at 58% 36%, rgba(168, 85, 247, .55) 0 2px, transparent 3px),
+        radial-gradient(circle at 64% 56%, rgba(34, 197, 94, .55) 0 2px, transparent 3px),
+        radial-gradient(circle at 74% 40%, rgba(255, 214, 0, .55) 0 2px, transparent 3px),
+        radial-gradient(circle at 78% 60%, rgba(255, 80, 170, .55) 0 2px, transparent 3px),
+        radial-gradient(circle at 50% 18%, rgba(0, 206, 255, .55) 0 2px, transparent 3px),
+        radial-gradient(circle at 52% 72%, rgba(168, 85, 247, .55) 0 2px, transparent 3px),
+        radial-gradient(circle at 30% 78%, rgba(34, 197, 94, .55) 0 2px, transparent 3px),
+        radial-gradient(circle at 66% 86%, rgba(255, 214, 0, .55) 0 2px, transparent 3px),
+
+        /* vignette (keeps edges rich but readable) */
+        radial-gradient(1200px 800px at 50% 50%, transparent 55%, rgba(0,0,0,0.35) 100%);
+      opacity: 1;
+    }
+
+    /* ====== your existing styles (unchanged, only readability upgraded) ====== */
     .booking-form {
       position: relative;
+      z-index: 2; /* above background layers */
       max-width: 500px;
       margin: 50px auto;
-      background: rgba(255,255,255,0.90);
+      background: rgba(255,255,255,0.92);
       padding: 30px;
       border-radius: 14px;
-      box-shadow: 0 10px 34px rgba(0,0,0,0.16);
-      backdrop-filter: blur(4px); /* slightly less blur so bg shows */
-      -webkit-backdrop-filter: blur(4px);
+      box-shadow:
+        0 14px 40px rgba(0,0,0,0.35),
+        0 0 0 1px rgba(255,255,255,0.25) inset;
+      backdrop-filter: blur(8px);
+      -webkit-backdrop-filter: blur(8px);
     }
 
     .form-control { background-color: #e9f0ff; }
@@ -205,6 +244,7 @@
       <input type="text" id="address" class="form-control mb-2" placeholder="Address" required />
       <input type="text" id="city" class="form-control mb-2" placeholder="City" required />
 
+      <!-- Date picker above selected unit -->
       <input type="date" id="date" class="form-control mb-3" required />
 
       <div class="selected-unit-pill">
@@ -271,7 +311,7 @@
       let bookedUnitIds = new Set();
       let checking = false;
 
-      const cart = []; // { unitId, unitName, price, date }
+      const cart = [];
 
       function cartKey(unitId, dateStr) { return `${String(unitId)}|${dateStr}`; }
 
@@ -370,7 +410,6 @@
         const { data, error } = await supabase
           .from('units')
           .select('id, name, thumbnail_url, price');
-
         if (error) return;
         unitsCache = data || [];
         renderUnits();
@@ -500,11 +539,8 @@
             { name, phone, email, address, city, unit: unitId, date }
           ]);
 
-          if (insertError) {
-            allSuccessful = false;
-          } else {
-            reservedLines.push(`${unitName} — $${formatMoney(price)}`);
-          }
+          if (insertError) allSuccessful = false;
+          else reservedLines.push(`${unitName} — $${formatMoney(price)}`);
         }
 
         if (allSuccessful) {
@@ -513,14 +549,8 @@
           const deposit_total = `$${formatMoney(getDepositTotal())}`;
 
           const params = {
-            name,
-            phone,
-            email,
-            address,
-            city,
-            items_summary,
-            total_price,
-            deposit_total,
+            name, phone, email, address, city,
+            items_summary, total_price, deposit_total,
             unit: cart[0]?.unitName || '',
             date: cart[0]?.date || ''
           };
@@ -533,6 +563,7 @@
           document.getElementById('bookingForm').reset();
 
           clearSelectionUI();
+
           cart.length = 0;
           document.getElementById('cartList').innerHTML = '';
           document.getElementById('cartSection').style.display = 'none';
@@ -544,7 +575,6 @@
         } else {
           document.getElementById('successMessage').style.display = 'none';
           document.getElementById('errorMessage').style.display = 'block';
-
           const d = document.getElementById('date').value;
           if (d) await refreshAvailability(d);
         }
