--- a/index.html
+++ b/index.html
@@ -6,50 +6,39 @@
   <title>Slide Guys Booking</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
   <style>
-    /* ====== PARTY BACKGROUND (rich, vibrant, faux-3D) ====== */
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      min-height: 100vh;
-      overflow-x: hidden;
+    /* ✅ Keep your original light body color */
+    body { background-color: #f8f9fa; font-family: Arial, sans-serif; margin: 0; min-height: 100vh; }
 
-      /* Deep, vibrant base with glow */
-      background:
-        radial-gradient(1200px 700px at 20% 10%, rgba(255, 0, 153, 0.25), transparent 60%),
-        radial-gradient(900px 600px at 80% 15%, rgba(0, 200, 255, 0.22), transparent 60%),
-        radial-gradient(900px 650px at 50% 95%, rgba(255, 214, 0, 0.18), transparent 65%),
-        linear-gradient(180deg, #0b1020 0%, #141a33 45%, #0b1020 100%);
-      background-attachment: fixed;
-    }
-
-    /* Streamers layer */
+    /* ====== PARTY BACKGROUND LAYERS (no body color change) ====== */
     body::before{
       content:"";
       position: fixed;
-      inset: -20px;
+      inset: 0;
       pointer-events: none;
       z-index: 0;
 
+      /* Streamers + soft 3D lighting */
       background:
-        /* diagonal streamers */
-        repeating-linear-gradient(130deg,
-          rgba(255, 80, 170, 0.18) 0 12px,
-          transparent 12px 40px
+        radial-gradient(900px 600px at 15% 10%, rgba(255, 80, 170, 0.20), transparent 60%),
+        radial-gradient(900px 600px at 85% 12%, rgba(0, 206, 255, 0.18), transparent 60%),
+        radial-gradient(900px 650px at 50% 90%, rgba(255, 214, 0, 0.14), transparent 65%),
+
+        repeating-linear-gradient(135deg,
+          rgba(0, 106, 255, 0.12) 0 10px,
+          transparent 10px 34px
         ),
-        repeating-linear-gradient(48deg,
-          rgba(0, 206, 255, 0.16) 0 10px,
-          transparent 10px 36px
+        repeating-linear-gradient(45deg,
+          rgba(255, 193, 7, 0.12) 0 12px,
+          transparent 12px 36px
         ),
-        repeating-linear-gradient(92deg,
-          rgba(255, 214, 0, 0.12) 0 10px,
-          transparent 10px 42px
+        repeating-linear-gradient(120deg,
+          rgba(255, 80, 170, 0.10) 0 10px,
+          transparent 10px 40px
         );
 
-      filter: blur(0.2px);
-      opacity: 0.95;
+      opacity: 1;
     }
 
-    /* Balloons + confetti + subtle vignette */
     body::after{
       content:"";
       position: fixed;
@@ -57,25 +46,26 @@
       pointer-events: none;
       z-index: 1;
 
+      /* Balloons + confetti + gentle vignette */
       background:
-        /* 3D-ish balloons (stacked highlights/shadows) */
-        radial-gradient(circle at 10% 18%, rgba(255,255,255,0.45) 0 10px, transparent 11px),
-        radial-gradient(circle at 12% 22%, rgba(255, 80, 170, 0.85) 0 62px, transparent 63px),
-        radial-gradient(circle at 13% 25%, rgba(0,0,0,0.25) 0 62px, transparent 64px),
+        /* balloons (highlight + body + shadow) */
+        radial-gradient(circle at 9% 17%, rgba(255,255,255,0.55) 0 10px, transparent 11px),
+        radial-gradient(circle at 11% 21%, rgba(255, 80, 170, 0.75) 0 62px, transparent 63px),
+        radial-gradient(circle at 12% 24%, rgba(0,0,0,0.18) 0 62px, transparent 66px),
 
-        radial-gradient(circle at 88% 16%, rgba(255,255,255,0.42) 0 9px, transparent 10px),
-        radial-gradient(circle at 86% 20%, rgba(0, 206, 255, 0.80) 0 70px, transparent 71px),
-        radial-gradient(circle at 87% 23%, rgba(0,0,0,0.25) 0 70px, transparent 72px),
+        radial-gradient(circle at 90% 16%, rgba(255,255,255,0.50) 0 9px, transparent 10px),
+        radial-gradient(circle at 88% 20%, rgba(0, 206, 255, 0.68) 0 70px, transparent 71px),
+        radial-gradient(circle at 89% 23%, rgba(0,0,0,0.18) 0 70px, transparent 74px),
 
-        radial-gradient(circle at 92% 78%, rgba(255,255,255,0.35) 0 9px, transparent 10px),
-        radial-gradient(circle at 90% 82%, rgba(255, 214, 0, 0.78) 0 68px, transparent 69px),
-        radial-gradient(circle at 91% 85%, rgba(0,0,0,0.25) 0 68px, transparent 71px),
+        radial-gradient(circle at 92% 78%, rgba(255,255,255,0.42) 0 9px, transparent 10px),
+        radial-gradient(circle at 90% 82%, rgba(255, 214, 0, 0.62) 0 68px, transparent 69px),
+        radial-gradient(circle at 91% 85%, rgba(0,0,0,0.16) 0 68px, transparent 72px),
 
-        radial-gradient(circle at 8% 84%, rgba(255,255,255,0.35) 0 9px, transparent 10px),
-        radial-gradient(circle at 10% 88%, rgba(94, 234, 212, 0.70) 0 62px, transparent 63px),
-        radial-gradient(circle at 11% 91%, rgba(0,0,0,0.25) 0 62px, transparent 65px),
+        radial-gradient(circle at 8% 84%, rgba(255,255,255,0.42) 0 9px, transparent 10px),
+        radial-gradient(circle at 10% 88%, rgba(94, 234, 212, 0.56) 0 62px, transparent 63px),
+        radial-gradient(circle at 11% 91%, rgba(0,0,0,0.16) 0 62px, transparent 66px),
 
-        /* confetti (lots of dots) */
+        /* confetti (denser + more color) */
         radial-gradient(circle at 18% 32%, rgba(255, 214, 0, .55) 0 2px, transparent 3px),
         radial-gradient(circle at 22% 46%, rgba(0, 206, 255, .55) 0 2px, transparent 3px),
         radial-gradient(circle at 34% 28%, rgba(255, 80, 170, .55) 0 2px, transparent 3px),
@@ -89,25 +79,23 @@
         radial-gradient(circle at 30% 78%, rgba(34, 197, 94, .55) 0 2px, transparent 3px),
         radial-gradient(circle at 66% 86%, rgba(255, 214, 0, .55) 0 2px, transparent 3px),
 
-        /* vignette (keeps edges rich but readable) */
-        radial-gradient(1200px 800px at 50% 50%, transparent 55%, rgba(0,0,0,0.35) 100%);
+        /* subtle vignette to keep focus on center */
+        radial-gradient(1100px 700px at 50% 50%, transparent 58%, rgba(0,0,0,0.10) 100%);
+
       opacity: 1;
     }
 
-    /* ====== your existing styles (unchanged, only readability upgraded) ====== */
     .booking-form {
       position: relative;
-      z-index: 2; /* above background layers */
+      z-index: 2; /* above the party layers */
       max-width: 500px;
       margin: 50px auto;
-      background: rgba(255,255,255,0.92);
+      background: rgba(255,255,255,0.96);
       padding: 30px;
-      border-radius: 14px;
-      box-shadow:
-        0 14px 40px rgba(0,0,0,0.35),
-        0 0 0 1px rgba(255,255,255,0.25) inset;
-      backdrop-filter: blur(8px);
-      -webkit-backdrop-filter: blur(8px);
+      border-radius: 10px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      backdrop-filter: blur(5px);
+      -webkit-backdrop-filter: blur(5px);
     }
 
     .form-control { background-color: #e9f0ff; }
@@ -183,18 +171,8 @@
       border: 1px solid rgba(0,0,0,0.06);
     }
 
-    .unit-card-btn.booked {
-      opacity: 0.55;
-      border-color: #e1e1e1;
-    }
-
-    .unit-card-btn.booked:hover {
-      transform: none;
-      box-shadow: none;
-      border-color: #e1e1e1;
-      cursor: not-allowed;
-    }
-
+    .unit-card-btn.booked { opacity: 0.55; border-color: #e1e1e1; }
+    .unit-card-btn.booked:hover { transform: none; box-shadow: none; border-color: #e1e1e1; cursor: not-allowed; }
     .unit-card-btn.booked img { filter: grayscale(35%); }
     .unit-card-btn.booked .unit-badge { background: #ffe9ea; }
 
@@ -332,19 +310,12 @@
         return v.toFixed(2).replace(/\.00$/, '');
       }
 
-      function getCartTotal() {
-        return cart.reduce((sum, item) => sum + priceNumber(item.price), 0);
-      }
-
-      function getDepositTotal() {
-        return cart.length * DEPOSIT_PER_UNIT;
-      }
+      function getCartTotal() { return cart.reduce((sum, item) => sum + priceNumber(item.price), 0); }
+      function getDepositTotal() { return cart.length * DEPOSIT_PER_UNIT; }
 
       function updateCartTotalsUI() {
-        const totalEl = document.getElementById('cartTotal');
-        const depEl = document.getElementById('cartDeposit');
-        if (totalEl) totalEl.textContent = formatMoney(getCartTotal());
-        if (depEl) depEl.textContent = formatMoney(getDepositTotal());
+        document.getElementById('cartTotal').textContent = formatMoney(getCartTotal());
+        document.getElementById('cartDeposit').textContent = formatMoney(getDepositTotal());
       }
 
       function clearSelectionUI() {
@@ -382,13 +353,8 @@
             <div class="unit-name">${unit.name}</div>
           `;
 
-          if (hasDate && !checking && isBooked) {
-            btn.classList.add('booked');
-            btn.setAttribute('aria-disabled', 'true');
-          }
-          if (hasDate && !checking && !isBooked && isInCart) {
-            btn.classList.add('incart');
-          }
+          if (hasDate && !checking && isBooked) { btn.classList.add('booked'); btn.setAttribute('aria-disabled', 'true'); }
+          if (hasDate && !checking && !isBooked && isInCart) { btn.classList.add('incart'); }
 
           btn.addEventListener('click', () => {
             const chosenDate = document.getElementById('date').value;
@@ -407,9 +373,7 @@
       }
 
       async function loadUnits() {
-        const { data, error } = await supabase
-          .from('units')
-          .select('id, name, thumbnail_url, price');
+        const { data, error } = await supabase.from('units').select('id, name, thumbnail_url, price');
         if (error) return;
         unitsCache = data || [];
         renderUnits();
@@ -427,9 +391,7 @@
           .select('unit')
           .eq('date', dateStr);
 
-        bookedUnitIds = (!error && bookings)
-          ? new Set(bookings.map(b => String(b.unit)))
-          : new Set();
+        bookedUnitIds = (!error && bookings) ? new Set(bookings.map(b => String(b.unit))) : new Set();
 
         checking = false;
         renderUnits();
@@ -472,9 +434,7 @@
         if (bookedUnitIds.has(unitId)) { alert('That unit is already booked on this date.'); clearSelectionUI(); return; }
 
         const key = cartKey(unitId, date);
-        if (cart.some(item => cartKey(item.unitId, item.date) === key)) {
-          return alert('That unit is already in your cart for this date.');
-        }
+        if (cart.some(item => cartKey(item.unitId, item.date) === key)) return alert('That unit is already in your cart for this date.');
 
         cart.push({ unitId, unitName, price: unitRow.price, date });
 
@@ -548,12 +508,7 @@
           const total_price = `$${formatMoney(getCartTotal())}`;
           const deposit_total = `$${formatMoney(getDepositTotal())}`;
 
-          const params = {
-            name, phone, email, address, city,
-            items_summary, total_price, deposit_total,
-            unit: cart[0]?.unitName || '',
-            date: cart[0]?.date || ''
-          };
+          const params = { name, phone, email, address, city, items_summary, total_price, deposit_total, unit: cart[0]?.unitName || '', date: cart[0]?.date || '' };
 
           await emailjs.send("service_1zxrd0j", "template_nqep0gt", params);
           await emailjs.send("service_1zxrd0j", "template_6z2dcsj", params);
@@ -563,7 +518,6 @@
           document.getElementById('bookingForm').reset();
 
           clearSelectionUI();
-
           cart.length = 0;
           document.getElementById('cartList').innerHTML = '';
           document.getElementById('cartSection').style.display = 'none';
