Change background image in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       font-family: Arial, sans-serif;
 
       /* ✅ Background image */
-      background-image: url("blob:https://slideguys.fun/317d6157-116a-4e18-b7c1-24af724a6a25");
+      background-image: url("https://thumbs.dreamstime.com/b/colorful-birthday-party-celebration-rainbow-border-fun-balloons-streamers-confetti-adding-festive-touch-exciting-348859905.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
