--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
   <style>
     body {
-      background-color: #f8f9fa;
+      background-color: #ffffff;
       font-family: Arial, sans-serif;
 
       /* ✅ Background image inserted (only change) */
