Update booking information in index.html

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <div class="booking-form text-center">
     <img src="https://lh3.googleusercontent.com/a-/ALV-UjUTAoSFAR5OUMj0ZCkgLF1RMYoE-Q85G0HPftaFEBBIjjzw9cQ=s265-w265-h265" alt="Slide Guys Logo" class="logo">
     <h2 class="mb-3">Slide Guys Booking</h2>
-    <p>Select a date and available units will be shown. Add items to cart. <br/>Deliveries within 10 miles of Richfield are free. <br/>All other outlying areas are available with a Travel Fee ($30 for 10-20 miles, $45 for 20-30 miles, $96 for 30-40 miles). <br/>No cancellations. Rescheduling is subject to availability. <br/>A $50 deposit per unit is due at time of reservation (per unit). We accept cash, check, venmo, cash app, and pay-pal.</p>
+    <p>Select a date and available units will be shown. Add items to cart, and check out. Venmo payment link will be provided in email. <br/>Deliveries within 10 miles of Richfield are free. <br/>All other outlying areas are available with a Travel Fee ($30 for 10-20 miles, $45 for 20-30 miles, $96 for 30-40 miles). <br/>No cancellations. Rescheduling is subject to availability. <br/>A $50 deposit per unit is due at time of reservation (per unit). We accept cash, check, venmo, cash app, and pay-pal.</p>
 
     <form id="bookingForm">
       <input type="text" id="name" class="form-control mb-2" placeholder="Full Name" required />
